# dpkvslk

./: .dockerignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
src/: app.py  document_qa.py  utils.py
